cluster/neuvector/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neuvector-webui
  namespace: neuvector
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik-internal
  rules:
    - host: neuvector.local.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neuvector-service-webui
                port:
                  number: 8443
